# CP2

./: .gitignore  README.md  flake.nix  plot_results.py  run_benchmarks.sh  run_experiements_offline.sh  settings.gradle
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3x925rhb3gjikmqkyqigjcdfqm1hsn6a-source  57z6p3ilyc50p5wx7big5lbzz8zp6drk-source  v3qm69cillgm9zgcy5aphrdis3a5q24w-source
app/: build.gradle
app/app/results/Ragana-2026-27-03_17-25-19/: Ragana-2026-27-03_17-25-19.csv
app/latest-results/raspberrypi-22-03-2026_06-21-07/: jmh-2026-22-03_16-16-04.csv  jmh-2026-22-03_19-34-23.csv
app/results/: jmh-2026-03-22_09-09-44.csv  quick_test_jmh-2026-03-17_22-00-16.csv  sysinfo-2026-03-22_06-20-17.txt
app/src/main/java/: HashMapPerformance.java  HashTrieMap.java  StripedLevelSnapshotWriteMap.java  StripedWriteMap.java  SynchronizedMap.java  WrapConcurrentHashMap.java
latest-results/: jmh-2026-03-22_21-54-12.csv  jmh-2026-03-23_01-09-45.csv  jmh-2026-03-23_04-25-20.csv  sysinfo-2026-03-22_21-54-12.txt
latest-results/raspberrypi-22-03-2026_06-21-07/: jmh-2026-22-03_06-21-07.csv  sysinfo-2026-22-03_06-20-54.txt
latest-results/spark-c183-26-03-2026_14-03-51/: jmh-2026-26-03_14-05-07.csv  jmh-2026-26-03_15-43-01.csv  jmh-2026-26-03_22-14-38.csv  sysinfo.txt
local-plugin-repo/junit/junit/4.13.2/: junit-4.13.2.pom
main/: .gitignore  compare_hardware.py  plot_results.py  run_benchmarks.sh  settings.gradle
main/app/: build.gradle
main/gpu_bench/: CMakeLists.txt  Makefile  benchmark.cu  run_a100.sh  run_benchmark.sh  run_h100.sh  run_l40s.sh  run_rtx6000ada.sh
report/: Makefile  report.tex
results/archived/spark-c183-26-03-2026_14-03-51/: jmh-2026-26-03_17-20-54.csv  jmh-2026-26-03_20-36-43.csv
results/cpu/: spark-c183-2026-03-27_19-10-10-t16.csv  spark-c183-2026-03-27_19-10-10-t32.csv  spark-c183-2026-03-27_19-10-10-t4.csv  spark-c183-2026-03-27_19-10-10-t8.csv
results/cpu/archived/raspberrypi-22-03-2026_06-21-07/: jmh-2026-22-03_12-57-45.csv
results/cpu/raspberrypi-2026-03-27_18-16-22/: raspberrypi-2026-03-27_18-16-22-t1.csv  raspberrypi-2026-03-27_18-16-22-t2.csv
results/gpu/: cn13-2026-05-19_14-23-07.csv  spark-c183-2026-05-18_22-47-15.csv
results/raspberrypi-2026-03-27_18-16-22/: raspberrypi-2026-03-27_18-16-22-t4.csv  raspberrypi-2026-03-27_18-16-22-t8.csv
results/raspberrypi-22-03-2026_06-21-07/: jmh-2026-22-03_09-20-09.csv  jmh-2026-22-03_09-39-27.csv
results/spark-c183-2026-03-27_19-10-10/: spark-c183-2026-03-27_19-10-10-t1.csv  spark-c183-2026-03-27_19-10-10-t2.csv  spark-c183-2026-03-27_19-10-10-t64.csv
results/spark-c183-26-03-2026_14-03-51/: jmh-2026-26-03_23-52-33.csv
src/: HashMapTest.java  OurMap.java  StripedLevelWriteMap.java  StripedMap.java  StripedMapPadded.java  StripedWriteMapPadded.java  Timer.java
(+20 files in other folders)
